--- a/dcm-import/docker-compose.yml
+++ b/dcm-import/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     volumes:
     - /scor-data:/scor-data
     environment:
-      UPLOAD_FOLDER: "/scor-data"
+      UPLOAD_FOLDER: "/scor-data/"
       MONGO_DBNAME: 'dcm_db'
       MONGO_URI: 'mongodb://dcm-consmos:pUQRAZMYnTiYikWTxjcq7zQch27litMHCSJnHOu9XCssYxBqVRWmMpd8sSnd0G7w66dQ7GMS4UK8iAvOsoBGtw==@dcm-consmos.mongo.cosmos.azure.com:10255/dcm?ssl=true&replicaSet=globaldb&retrywrites=false&maxIdleTimeMS=120000&appName=@dcm-consmos@'
       CORS_HEADERS: 'Content-Type'
