--- a/dcm-import/requirements.txt
+++ b/dcm-import/requirements.txt
@@ -33,6 +33,6 @@ pyparsing==2.4.7
 python-dateutil==2.8.1
 requests==2.24.0
 thrift==0.13.0
-urllib3==1.25.11
-git+https://github.com/wajihkat/connectors.git@master#egg=connectors
+urllib3
+git+https://github.com/HassenMahdi/dcm-connectors.git@main#egg=connectors
 pandas_profiling
