--- a/dcm-transform/requirements.txt
+++ b/dcm-transform/requirements.txt
@@ -6,7 +6,7 @@ bcrypt==3.1.4
 certifi==2020.6.20
 cffi==1.14.0
 chardet==3.0.4
-click==6.7
+clic
 coverage==4.4.2
 cryptography==2.9.2
 enum-compat==0.0.3
@@ -41,8 +41,7 @@ pytz==2017.3
 requests==2.24.0
 requests-oauthlib==1.3.0
 selenium==3.8.1
-six==1.11.0
-SQLAlchemy==1.3.18
+six
 urllib3==1.25.9
 Werkzeug==0.15.3
 xlrd==1.2.0
