--- a/.env-locale
+++ b/.env-locale
@@ -1,4 +1,4 @@
-MONGO_URI = "mongodb://localhost:27017/dcm?readPreference=primary&appname=MongoDB%20Compass&ssl=false"
+MONGO_URI = "mongodb://host.docker.internal:27017/dcm?readPreference=primary&appname=MongoDB%20Compass&ssl=false"
 UPLOAD_FOLDER = "/data/"
 APP_ENV= "prod"
 SECRET_KEY = "SECRET"
