--- a/dcm-mapping/Dockerfile
+++ b/dcm-mapping/Dockerfile
@@ -1,4 +1,3 @@
-
 FROM rappdw/docker-java-python:latest
 # SETUP PYTHON ENV
 RUN mkdir -p /usr/src/app
@@ -15,4 +14,4 @@ COPY . /usr/src/app
 
 EXPOSE 5000
 
-ENTRYPOINT [ "gunicorn", "-w", "4", "application:app", "--bind", "0.0.0.0:5000"]
+ENTRYPOINT [ "gunicorn", "-w", "4", "main:app", "--bind", "0.0.0.0:5000"]
