--- a/dcm-admin/requirements.txt
+++ b/dcm-admin/requirements.txt
@@ -44,7 +44,6 @@ selenium==3.8.1
 six==1.11.0
 SQLAlchemy==1.3.18
 urllib3==1.25.9
-Werkzeug==0.15.3
 alembic==0.9.6
 aniso8601==8.0.0
 azure-core==1.7.0
@@ -92,6 +91,7 @@ selenium==3.8.1
 six==1.11.0
 SQLAlchemy==1.3.18
 urllib3==1.25.9
-Werkzeug==0.15.3
+Werkzeug==0.16.1
 xlrd==1.2.0
 xlsxwriter
+numpy~=1.23.1
